; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_macrotab.c_free_macro_source_file.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_macrotab.c_free_macro_source_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.macro_source_file = type { i32, i64, %struct.macro_source_file*, %struct.macro_source_file* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.macro_source_file*)* @free_macro_source_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_macro_source_file(%struct.macro_source_file* %0) #0 {
  %2 = alloca %struct.macro_source_file*, align 8
  %3 = alloca %struct.macro_source_file*, align 8
  %4 = alloca %struct.macro_source_file*, align 8
  store %struct.macro_source_file* %0, %struct.macro_source_file** %2, align 8
  %5 = load %struct.macro_source_file*, %struct.macro_source_file** %2, align 8
  %6 = getelementptr inbounds %struct.macro_source_file, %struct.macro_source_file* %5, i32 0, i32 3
  %7 = load %struct.macro_source_file*, %struct.macro_source_file** %6, align 8
  store %struct.macro_source_file* %7, %struct.macro_source_file** %3, align 8
  br label %8

8:                                                ; preds = %16, %1
  %9 = load %struct.macro_source_file*, %struct.macro_source_file** %3, align 8
  %10 = icmp ne %struct.macro_source_file* %9, null
  br i1 %10, label %11, label %18

11:                                               ; preds = %8
  %12 = load %struct.macro_source_file*, %struct.macro_source_file** %3, align 8
  %13 = getelementptr inbounds %struct.macro_source_file, %struct.macro_source_file* %12, i32 0, i32 2
  %14 = load %struct.macro_source_file*, %struct.macro_source_file** %13, align 8
  store %struct.macro_source_file* %14, %struct.macro_source_file** %4, align 8
  %15 = load %struct.macro_source_file*, %struct.macro_source_file** %3, align 8
  call void @free_macro_source_file(%struct.macro_source_file* %15)
  br label %16

16:                                               ; preds = %11
  %17 = load %struct.macro_source_file*, %struct.macro_source_file** %4, align 8
  store %struct.macro_source_file* %17, %struct.macro_source_file** %3, align 8
  br label %8

18:                                               ; preds = %8
  %19 = load %struct.macro_source_file*, %struct.macro_source_file** %2, align 8
  %20 = getelementptr inbounds %struct.macro_source_file, %struct.macro_source_file* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = load %struct.macro_source_file*, %struct.macro_source_file** %2, align 8
  %23 = getelementptr inbounds %struct.macro_source_file, %struct.macro_source_file* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = inttoptr i64 %24 to i8*
  %26 = call i32 @macro_bcache_free(i32 %21, i8* %25)
  %27 = load %struct.macro_source_file*, %struct.macro_source_file** %2, align 8
  %28 = load %struct.macro_source_file*, %struct.macro_source_file** %2, align 8
  %29 = getelementptr inbounds %struct.macro_source_file, %struct.macro_source_file* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = call i32 @macro_free(%struct.macro_source_file* %27, i32 %30)
  ret void
}

declare dso_local i32 @macro_bcache_free(i32, i8*) #1

declare dso_local i32 @macro_free(%struct.macro_source_file*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
